[gd_scene load_steps=31 format=3 uid="uid://b20vhy1p6xhk7"]

[ext_resource type="Script" uid="uid://by0r6bqc51rii" path="res://scripts/enemy.gd" id="1_5x1i7"]
[ext_resource type="Texture2D" uid="uid://dnsu8d1llqtul" path="res://sprites/KazakhsThanos/Fist_SW-Sheet.png" id="2_05iol"]
[ext_resource type="Texture2D" uid="uid://bued5kx7nla2e" path="res://sprites/KazakhsThanos/Walking_SW.png" id="3_j2xlt"]
[ext_resource type="Texture2D" uid="uid://bc6by3v2y14cf" path="res://sprites/Робот/Attack_SE.png" id="4_5x1i7"]
[ext_resource type="Texture2D" uid="uid://bitsh351f6qa" path="res://sprites/Робот/death_SE.png" id="5_05iol"]
[ext_resource type="Texture2D" uid="uid://u0p035rnd5mx" path="res://sprites/Робот/Move_SE.png" id="6_j2xlt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iy53l"]
atlas = ExtResource("2_05iol")
region = Rect2(0, 0, 194, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2gwa"]
atlas = ExtResource("3_j2xlt")
region = Rect2(0, 0, 82, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm0w"]
atlas = ExtResource("3_j2xlt")
region = Rect2(82, 0, 82, 151)

[sub_resource type="SpriteFrames" id="SpriteFrames_iy53l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy53l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2gwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm0w")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3m3e"]
size = Vector2(45.00027, 34.49975)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ayb"]
atlas = ExtResource("4_5x1i7")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeqxu"]
atlas = ExtResource("4_5x1i7")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaupy"]
atlas = ExtResource("4_5x1i7")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ral23"]
atlas = ExtResource("4_5x1i7")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r67l"]
atlas = ExtResource("4_5x1i7")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6mrl"]
atlas = ExtResource("4_5x1i7")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsjuq"]
atlas = ExtResource("5_05iol")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mtet"]
atlas = ExtResource("5_05iol")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_61jvq"]
atlas = ExtResource("5_05iol")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aefo"]
atlas = ExtResource("5_05iol")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_evsjy"]
atlas = ExtResource("6_j2xlt")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq8x7"]
atlas = ExtResource("6_j2xlt")
region = Rect2(200, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_w71t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ayb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeqxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaupy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ral23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r67l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6mrl")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsjuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mtet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61jvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aefo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evsjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq8x7")
}],
"loop": true,
"name": &"walking",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_l3m3e"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 1, 2, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"activate_hitbox"
}, {
"args": [],
"method": &"deactivate_hitbox"
}, {
"args": [],
"method": &"_end_attack"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_activate_hitbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.0666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_activate_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_wvd63"]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.016666668, 0.975, 1, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"activate_hitbox"
}, {
"args": [],
"method": &"deactivate_hitbox"
}, {
"args": [],
"method": &"_end_attack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqv6w"]
_data = {
&"RESET": SubResource("Animation_l3m3e"),
&"attack": SubResource("Animation_wvd63")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wvd63"]
radius = 34.0
height = 136.77254

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvd63"]
size = Vector2(187.57703, 164.38287)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jqv6w"]
size = Vector2(170.16795, 167.51923)

[node name="RobotEnemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.9, 0.9)
motion_mode = 1
script = ExtResource("1_5x1i7")
hp = 20

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -153)
scale = Vector2(2.6484144, 2.4559917)
sprite_frames = SubResource("SpriteFrames_iy53l")
animation = &"walk"
frame = 2
frame_progress = 0.34522715

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
visible = false
position = Vector2(67.49986, -41.249863)
scale = Vector2(1, 0.99999946)
shape = SubResource("RectangleShape2D_l3m3e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AreaAttack"]
position = Vector2(-1.6298147e-09, -113.00001)
rotation = 0.00026583672
scale = Vector2(1.7159104, 1.7159104)
sprite_frames = SubResource("SpriteFrames_w71t2")
animation = &"walking"
autoplay = "walking"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AreaAttack"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_jqv6w")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(-2, -91)
scale = Vector2(1.4331683, 1.2362251)
shape = SubResource("CapsuleShape2D_wvd63")

[node name="HitBoxRight" type="Area2D" parent="."]
position = Vector2(67, -16)
scale = Vector2(0.8511143, 0.8511143)

[node name="HitBox_RightCollision" type="CollisionShape2D" parent="HitBoxRight"]
physics_interpolation_mode = 2
position = Vector2(41.577934, -72.89938)
scale = Vector2(0.99734026, 1)
shape = SubResource("RectangleShape2D_wvd63")

[node name="HitBoxLeft" type="Area2D" parent="."]

[node name="HitBox_LeftCollision" type="CollisionShape2D" parent="HitBoxLeft"]
position = Vector2(-94.40272, -78.711006)
scale = Vector2(0.8532427, 0.8511143)
shape = SubResource("RectangleShape2D_jqv6w")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="HitBoxRight" to="." method="_on_hit_box_right_body_entered"]
[connection signal="body_entered" from="HitBoxLeft" to="." method="_on_hit_box_left_body_entered"]
